--- a/templates/index.html
+++ b/templates/index.html
@@ -1,125 +1,8 @@
-<!DOCTYPE html>
-{% load static %}
-<html lang="pt-br">
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="">
-	<meta name="author" content="">
+{% extends 'base.html' %}
 
-	<title>SB Admin 2 - Bootstrap Admin</title>
+{% block title %} Dashboard {% endblock %}
 
-	<link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
-	<!-- Bootstrap Core CSS -->
-	<link href="{% static 'metisMenu/metisMenu.min.css' %}" rel="stylesheet">
-	<!-- MetisMenu CSS -->
-	<link href="{% static 'dist/css/sb-admin-2.css' %}" rel="stylesheet">
-	<!-- Custom CSS -->
-	<link href="{% static 'font-awesome/css/font-awesome.min.css' %}"
-				rel="stylesheet" type="text/css"> <!-- Custom Fonts -->
-	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-	<!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-</head>
-
-<body>
-<div id="wrapper">
-	<!-- Navigation -->
-	<nav class="navbar navbar-default navbar-static-top" role="navigation"
-			 style="margin-bottom: 0">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle" data-toggle="collapse"
-							data-target=".navbar-collapse">
-				<span class="sr-only">Toggle navigation</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
-			<a class="navbar-brand" href="{% url 'index' %}">ONG</a>
-		</div>
-		<!-- /.navbar-header -->
-
-		<ul class="nav navbar-top-links navbar-right">
-			<li class="dropdown">
-				<a class="dropdown-toggle" data-toggle="dropdown" href="#">
-					<i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
-				</a>
-				<ul class="dropdown-menu dropdown-user">
-					<li><a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
-					</li>
-					<li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
-					</li>
-					<li class="divider"></li>
-					<li><a href="pages/login.html"><i class="fa fa-sign-out fa-fw"></i>
-						Logout</a>
-					</li>
-				</ul>
-				<!-- /.dropdown-user -->
-			</li>
-			<!-- /.dropdown -->
-		</ul>
-		<!-- /.navbar-top-links -->
-
-		<div class="navbar-default sidebar" role="navigation">
-			<div class="sidebar-nav navbar-collapse">
-				<ul class="nav" id="side-menu">
-					<div class="panel-heading">
-						<h4 class="text-center"><strong>Olá Lucas Felix !</strong></h4>
-					</div>
-					<li>
-						<a href="{% url 'index' %}"><i class="fa fa-dashboard fa-fw"></i>
-							Dashboard</a>
-					</li>
-					<li>
-						<a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Cadastro<span
-							class="fa arrow"></span></a>
-						<ul class="nav nav-second-level">
-							<li><a href="#">Aluno</a></li>
-							<li><a href="#">Doador</a></li>
-							<li><a href="#">Funcionário</a></li>
-							<li><a href="#">Usuário</a></li>
-							<li>
-								<a href="#">Outros<span class="fa arrow"></span></a>
-								<ul class="nav nav-third-level">
-									<li><a href="#">Cursos</a></li>
-									<li><a href="#">Matrículas</a></li>
-									<li><a href="#">Mensalidades</a></li>
-									<li><a href="#">Turmas</a></li>
-								</ul>
-								<!-- /.nav-third-level -->
-							</li>
-						</ul>
-						<!-- /.nav-second-level -->
-					</li>
-					<li>
-						<a href="#"><i class="fa fa-users fa-fw"></i> Pessoas<span
-							class="fa arrow"></span></a>
-						<ul class="nav nav-second-level">
-							<li><a href="#">Alunos</a></li>
-							<li><a href="#">Doadores</a></li>
-							<li><a href="#">Funcionários</a></li>
-							<li><a href="#">Usuários</a></li>
-						</ul>
-						<!-- /.nav-second-level -->
-					</li>
-					<li><a href="#"><i class="fa fa-cube fa-fw"></i> Doações</a></li>
-					<li><a href="#"><i class="fa fa-hourglass-2 fa-fw"></i> Despesas</a></li>
-					<li><a href="#"><i class="fa fa-gg fa-fw"></i> Cursos</a></li>
-					<li><a href="#"><i class="fa fa-files-o fa-fw"></i> Matrículas</a></li>
-					<li><a href="#"><i class="fa fa-dollar fa-fw"></i> Mensalidades</a></li>
-					<li><a href="#"><i class="fa fa-code-fork fa-fw"></i> Turmas</a></li>
-				</ul>
-			</div>
-			<!-- /.sidebar-collapse -->
-		</div>
-		<!-- /.navbar-static-side -->
-	</nav>
-
+{% block content %}
 	<div id="page-wrapper">
 		<div class="row">
 			<div class="col-lg-12">
@@ -145,7 +28,8 @@
 					<a href="#">
 						<div class="panel-footer">
 							<span class="pull-left">View Details</span>
-							<span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+							<span class="pull-right"><i
+								class="fa fa-arrow-circle-right"></i></span>
 							<div class="clearfix"></div>
 						</div>
 					</a>
@@ -167,7 +51,8 @@
 					<a href="#">
 						<div class="panel-footer">
 							<span class="pull-left">View Details</span>
-							<span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+							<span class="pull-right"><i
+								class="fa fa-arrow-circle-right"></i></span>
 							<div class="clearfix"></div>
 						</div>
 					</a>
@@ -189,7 +74,8 @@
 					<a href="#">
 						<div class="panel-footer">
 							<span class="pull-left">View Details</span>
-							<span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+							<span class="pull-right"><i
+								class="fa fa-arrow-circle-right"></i></span>
 							<div class="clearfix"></div>
 						</div>
 					</a>
@@ -211,7 +97,8 @@
 					<a href="#">
 						<div class="panel-footer">
 							<span class="pull-left">View Details</span>
-							<span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+							<span class="pull-right"><i
+								class="fa fa-arrow-circle-right"></i></span>
 							<div class="clearfix"></div>
 						</div>
 					</a>
@@ -230,17 +117,4 @@
 		<!-- /.row -->
 	</div>
 	<!-- /#page-wrapper -->
-</div>
-<!-- /#wrapper -->
-
-<script src="{% static 'jquery/jquery.min.js' %}"></script> <!-- jQuery -->
-<script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
-<!-- Bootstrap Core JavaScript -->
-<script src="{% static 'metisMenu/metisMenu.min.js' %}"></script>
-<!-- Metis Menu Plugin JavaScript -->
-<script src="{% static 'dist/js/sb-admin-2.js' %}"></script>
-<!-- Custom Theme JavaScript -->
-
-</body>
-
-</html>
+{% endblock %}
