--- a/templates/base.html
+++ b/templates/base.html
@@ -122,11 +122,12 @@
 		</div>
 		<!-- /.navbar-static-side -->
 	</nav>
-
-	{% block content %}{% endblock %}
-
-</div>
-<!-- /#wrapper -->
+	<div id="page-wrapper">
+		{% block content %}{% endblock %}
+		</div>
+		<!-- /#page-wrapper -->
+	</div>
+	<!-- /#wrapper -->
 
 <script src="{% static 'jquery/jquery.min.js' %}"></script> <!-- jQuery -->
 <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
