Correção das rows em people/models.py, adição das rotas em urls.py, adição das views em views.py, e criação dos templates listagem, people_list e students_list, ambos arquivos html.

--- a/templates/base.html
+++ b/templates/base.html
@@ -100,7 +100,7 @@
 						<a href="#"><i class="fa fa-users fa-fw"></i> Pessoas<span
 							class="fa arrow"></span></a>
 						<ul class="nav nav-second-level">
-							<li><a href="#">Alunos</a></li>
+							<li><a href="{% url 'people:students_list' %}">Alunos</a></li>
 							<li><a href="#">Doadores</a></li>
 							<li><a href="#">Funcionários</a></li>
 							<li><a href="#">Usuários</a></li>
