--- a/templates/people/listagem.html
+++ b/templates/people/listagem.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}  {% endblock %}
+{% block title %} {{ complete_title }} {% endblock %}
 
 {% block content %}
 	<div class="row">
