--- a/templates/base.html
+++ b/templates/base.html
@@ -90,7 +90,7 @@
 						<a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Cadastro<span
 							class="fa arrow"></span></a>
 						<ul class="nav nav-second-level">
-							<li><a href="#">Aluno</a></li>
+							<li><a href="{% url 'people:students_create' %}">Aluno</a></li>
 							<li><a href="#">Doador</a></li>
 							<li><a href="#">Funcionário</a></li>
 							<li><a href="#">Usuário</a></li>
