--- a/templates/people/listagem.html
+++ b/templates/people/listagem.html
@@ -6,6 +6,7 @@
 	<div class="row">
 		<div class="col-lg-12">
 			<h1 class="page-header">{{ complete_title }}</h1>
+			<a href="{{ add_url }}" type="button" class="btn btn-success"><i class="fa fa-plus"></i> Adicionar </a>
 		</div>
 	</div>
 
