--- a/templates/people/students/students_list.html
+++ b/templates/people/students/students_list.html
@@ -11,33 +11,37 @@
 					<table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
 						<thead>
 						<tr>
+							<th></th>
 							<th>Name</th>
 							<th>Gênero</th>
 							<th>Mãe</th>
 							<th>Data de nascimento</th>
 							<th>E-mail</th>
 							<th>Celular</th>
+							<th></th>
 						</tr>
 						</thead>
 						<tbody>
 						{% for student in students %}
-							<tr class="clickable-row" data-href="{% url 'people:students_update' student.ref_person student.slug %}">
+							<tr>
+								<td><a href="{% url 'people:students_update' student.ref_person student.slug %}"
+														type="button" class="btn btn-success btn-circle btn-sm"><i class="fa fa-edit"></i> </a></td>
 								<td>{{ student.name }} {{ student.last_name }}</td>
 								<td>{{ student.get_gender_display }}</td>
 								<td>{{ student.mothers_name }}</td>
 								<td>{{ student.date_of_birth }}</td>
 								<td>{{ student.email }}</td>
 								<td>{{ student.cellphone }}</td>
+
+								<td><button href="#" type="button" class="btn btn-danger btn-circle btn-sm"><i
+									class="fa fa-trash-o"></i> </button></td>
+{#								<td><a href="{% url 'people:students_update' student.ref_person student.slug %}"><i class="fa fa-edit"></i></a></td>#}
+{#								<td><a href="#"><i class="fa fa-trash"></i></a></td>#}
 							</tr>
 						{% endfor %}
 						</tbody>
 					</table>
 					<!-- /.table-responsive -->
-					<div class="well">
-							<h4>DataTables Usage Information</h4>
-							<p>DataTables is a very flexible, advanced tables plugin for jQuery. In SB Admin, we are using a specialized version of DataTables built for Bootstrap 3. We have also customized the table headings to use Font Awesome icons in place of images. For complete documentation on DataTables, visit their website at <a target="_blank" href="https://datatables.net/">https://datatables.net/</a>.</p>
-							<a class="btn btn-default btn-lg btn-block" target="_blank" href="https://datatables.net/">View DataTables Documentation</a>
-					</div>
 				</div>
 				<!-- /.panel-body -->
 			</div>
