Adding donor templates, listing and insert fields.

--- a/templates/base.html
+++ b/templates/base.html
@@ -91,7 +91,7 @@
 							class="fa arrow"></span></a>
 						<ul class="nav nav-second-level">
 							<li><a href="{% url 'people:students_create' %}">Aluno</a></li>
-							<li><a href="#">Doador</a></li>
+							<li><a href="{% url 'people:donors_create' %}">Doador</a></li>
 							<li><a href="#">Funcionário</a></li>
 							<li><a href="#">Usuário</a></li>
 							<li>
@@ -112,7 +112,7 @@
 							class="fa arrow"></span></a>
 						<ul class="nav nav-second-level">
 							<li><a href="{% url 'people:students_list' %}">Alunos</a></li>
-							<li><a href="#">Doadores</a></li>
+							<li><a href="{% url 'people:donors_list' %}">Doadores</a></li>
 							<li><a href="#">Funcionários</a></li>
 							<li><a href="#">Usuários</a></li>
 						</ul>
