--- a/templates/people/cadastrar.html
+++ b/templates/people/cadastrar.html
@@ -22,8 +22,13 @@
 					{% endif %}
 				</div>
 				<div class="row">
-					<button class="btn btn-success" type="submit"><i class="fa fa-check-circle"></i><span> Salvar</span>
+					<div class="col-lg-12">
+					<button class="btn btn-success btn-lg pull-right" style="margin-left: 10px" type="submit"><i class="fa fa-check-circle"></i><span> Salvar</span>
 					</button>
+					<button class="btn btn-info btn-lg pull-right" type="submit"><i class="fa fa-undo" href="{{ back_url }}"></i><span> Voltar</span>
+					</button>
+					</div>
+
 				</div>
 				{% if object.created_by and object.creation_date %}
 					<div class="row clearfix m-l-5">
