--- a/templates/people/listagem.html
+++ b/templates/people/listagem.html
@@ -6,7 +6,7 @@
 	<div class="row">
 		<div class="col-lg-12">
 			<h1 class="page-header">{{ complete_title }}</h1>
-			<a href="{{ add_url }}" type="button" class="btn btn-success"><i class="fa fa-plus"></i> Adicionar </a>
+			<a href="{{ add_url }}" type="button" class="btn btn-success pull-right" style="margin-bottom: 15px;"><i class="fa fa-plus"></i> Adicionar </a>
 		</div>
 	</div>
 
@@ -14,6 +14,8 @@
 		<div class="col-lg-12">
       {% if type == 'students'%}
         {% include 'people/students/students_list.html' %}
+			{% elif type == 'donors'%}
+        {% include 'people/donors/donors_list.html' %}
       {% else %}
         <h1> Error !</h1>
       {% endif %}
