--- a/templates/people/cadastrar.html
+++ b/templates/people/cadastrar.html
@@ -23,10 +23,10 @@
 				</div>
 				<div class="row">
 					<div class="col-lg-12">
-					<button class="btn btn-success btn-lg pull-right" style="margin-left: 10px" type="submit"><i class="fa fa-check-circle"></i><span> Salvar</span>
+					<button class="btn btn-success btn-lg pull-right" style="margin-left: 10px; margin-bottom: 10px;" type="submit"><i class="fa fa-check-circle"></i><span> Salvar</span>
 					</button>
-					<button class="btn btn-info btn-lg pull-right" type="submit"><i class="fa fa-undo" href="{{ back_url }}"></i><span> Voltar</span>
-					</button>
+					<a href="{{ back_url }}" class="btn btn-info btn-lg pull-right"><i class="fa fa-undo"></i><span> Voltar</span>
+					</a>
 					</div>
 
 				</div>
