ADicionando templates employees_fields/list.html, correcao na exibicao dos templates students/donors_list.html e ajustes de campos em people/forms.py.

--- a/templates/base.html
+++ b/templates/base.html
@@ -92,7 +92,7 @@
 						<ul class="nav nav-second-level">
 							<li><a href="{% url 'people:students_create' %}">Aluno</a></li>
 							<li><a href="{% url 'people:donors_create' %}">Doador</a></li>
-							<li><a href="#">Funcionário</a></li>
+							<li><a href="{% url 'people:employees_create' %}">Funcionário</a></li>
 							<li><a href="#">Usuário</a></li>
 							<li>
 								<a href="#">Outros<span class="fa arrow"></span></a>
@@ -113,7 +113,7 @@
 						<ul class="nav nav-second-level">
 							<li><a href="{% url 'people:students_list' %}">Alunos</a></li>
 							<li><a href="{% url 'people:donors_list' %}">Doadores</a></li>
-							<li><a href="#">Funcionários</a></li>
+							<li><a href="{% url 'people:employees_list' %}">Funcionários</a></li>
 							<li><a href="#">Usuários</a></li>
 						</ul>
 						<!-- /.nav-second-level -->
