--- a/templates/people/donors/donors_list.html
+++ b/templates/people/donors/donors_list.html
@@ -3,9 +3,6 @@
 	<div class="row">
 		<div class="col-lg-12">
 			<div class="panel panel-default">
-{#				<div class="panel-heading">#}
-{#					<button type="button" class="btn btn-default">Default</button>#}
-{#				</div>#}
 				<!-- /.panel-heading -->
 				<div class="panel-body">
 					<table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
@@ -18,7 +15,6 @@
 							<th>Data de nascimento</th>
 							<th>E-mail</th>
 							<th>Celular</th>
-							<th></th>
 						</tr>
 						</thead>
 						<tbody>
@@ -32,10 +28,8 @@
 								<td>{{ donor.date_of_birth }}</td>
 								<td>{{ donor.email }}</td>
 								<td>{{ donor.cellphone }}</td>
-								<td><button href="#" type="button" class="btn btn-danger btn-circle btn-sm"><i
-									class="fa fa-trash-o"></i> </button></td>
-{#								<td><a href="{% url 'people:donors_update' donor.ref_person donor.slug %}"><i class="fa fa-edit"></i></a></td>#}
-{#								<td><a href="#"><i class="fa fa-trash"></i></a></td>#}
+{#								<td><button href="#" type="button" class="btn btn-danger btn-circle btn-sm"><i#}
+{#									class="fa fa-trash-o"></i> </button></td>#}
 							</tr>
 						{% endfor %}
 						</tbody>
