Alteração no local dos templates cadastrar e listagem e adição de courses ao base.html.

--- a/templates/base.html
+++ b/templates/base.html
@@ -97,7 +97,7 @@
 							<li>
 								<a href="#">Outros<span class="fa arrow"></span></a>
 								<ul class="nav nav-third-level">
-									<li><a href="#">Cursos</a></li>
+									<li><a href="{% url 'adm:courses_create' %}">Cursos</a></li>
 									<li><a href="#">Matrículas</a></li>
 									<li><a href="#">Mensalidades</a></li>
 									<li><a href="#">Turmas</a></li>
