--- a/templates/cadastrar.html
+++ b/templates/cadastrar.html
@@ -19,6 +19,8 @@
 						{% include 'people/donors/donors_fields.html' %}
 					{% elif type == 'employees' %}
 						{% include 'people/employees/employees_fields.html' %}
+					{% elif type == 'courses' %}
+						{% include 'adm/courses/courses_fields.html' %}
 					{% endif %}
 				</div>
 				<div class="row">
