--- a/templates/adm/courses/courses_list.html
+++ b/templates/adm/courses/courses_list.html
@@ -1,23 +1,42 @@
-<div class="table-responsive">
-	<table
-		class="table table-bordered table-striped table-hover js-basic-example dataTable">
-		<thead>
-		<tr>
-			<th>Name</th>
-			<th>Valor</th>
-			<th>Qtd. Alunos</th>
-			<th>Duração</th>
-		</tr>
-		</thead>
-		<tbody>
-		{% for course in courses %}
-			<tr class="" href="{% url 'adm:courses_update' course.ref_adm course.slug %}">
-				<td>{{ course.name }} {{ course.last_name }}</td>
-				<td>{{ course.price }}</td>
-				<td>{{ course.students_number }}</td>
-				<td>{{ course.duration }}</td>
-			</tr>
-		{% endfor %}
-		</tbody>
-	</table>
-</div>
+{% block content %}
+	<!-- row -->
+	<div class="row">
+		<div class="col-lg-12">
+			<div class="panel panel-default">
+				<!-- /.panel-heading -->
+				<div class="panel-body">
+					<table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
+						<thead>
+						<tr>
+							<th></th>
+							<th>Nome</th>
+							<th>Valor</th>
+							<th>Qtd. Alunos</th>
+							<th>Duração</th>
+						</tr>
+						</thead>
+						<tbody>
+						{% for course in courses %}
+							<tr>
+								<td><a href="{% url 'adm:courses_update' course.ref_adm course.slug %}"
+											 type="button" class="btn btn-success btn-circle btn-sm"><i class="fa fa-edit"></i> </a></td>
+								<td>{{ course.name }} {{ course.last_name }}</td>
+								<td>{{ course.price }}</td>
+								<td>{{ course.students_number }}</td>
+								<td>{{ course.duration }}</td>
+{#								<td><button href="#" type="button" class="btn btn-danger btn-circle btn-sm"><i#}
+{#									class="fa fa-trash-o"></i> </button></td>#}
+							</tr>
+						{% endfor %}
+						</tbody>
+					</table>
+					<!-- /.table-responsive -->
+				</div>
+				<!-- /.panel-body -->
+			</div>
+			<!-- /.panel -->
+		</div>
+		<!-- /.col-lg-12 -->
+	</div>
+	<!-- /.row -->
+{% endblock %}
